--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,9 +45,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - burger.png
+    - fries.png
+    - hot-dog.png
+    - ice-cream.png
+    - pizza.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,17 +63,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+  - family: Helvetica-Bold
+    fonts:
+      - asset: fonts/Helvetica-Bold.otf
+  - family: Helvetica-Light
+    fonts:
+      - asset: fonts/Helvetica-Light.ttf
+  - family: Helvetica-Medium
+    fonts:
+      - asset: fonts/Helvetica-Medium.ttf
+  - family: Helvetica-Regular
+    fonts:
+      - asset: fonts/Helvetica-Regular.ttf
+  - family: Helvetica-Thin
+    fonts:
+      - asset: fonts/Helvetica-Thin.ttf      
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
